--- a/css/diferenciales.css
+++ b/css/diferenciales.css
@@ -42,3 +42,10 @@
     background-repeat: no-repeat;
 
 }
+@media screen and (min-width:1024px) {
+    .diferenciales{
+
+        background-color: var(--background-ceniza-claro);
+        justify-content: space-around;
+    }
+}
