--- a/css/planes.css
+++ b/css/planes.css
@@ -104,3 +104,22 @@
 .tarjetas__boton--mega {
     border-color: var(--planes-card-mega);
 }
+@media screen and (min-width: 1024px) {
+    .planes__tarjetas {
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: flex-end;
+    }
+    .tarjetas {
+        margin-right: 10px;
+    }
+    
+
+}
+
+@media screen and (min-width:768px) {
+    .tarjetas {
+        max-width: 400px;
+    }
+
+}
